# IntelliChess

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  build.ps1  build.sh  chess  conanfile.py
.github/workflows/: cmake-multi-platform.yml
holup/include/: MoveHighlighter.h  TerminalSizeWatcher.h  clock.h  game.h  mover.h  player.h
holup/src/Board/: board.cpp
holup/src/Main/: main.cpp
holup/src/Move/: MoveHighlighter.cpp  mover.cpp
holup/src/TUI/: screen.cpp
include/: PreCompiledHeaders.hpp  board.h  clock.h  game.h  piece_tile.h  screen.h
include/engine/: Alliance.hpp  alliance.hpp
include/engine/board/: Board.hpp  BoardUtils.hpp  Move.hpp  MoveTransition.hpp  Tile.hpp
include/engine/pieces/: Bishop.hpp  King.hpp  Knight.hpp  Pawn.hpp  Piece.hpp  Queen.hpp  Rook.hpp
include/engine/player/: BlackPlayer.hpp  Player.hpp  WhitePlayer.hpp
include/engine/player/ai/: AlphaBeta.hpp  BoardEvaluator.hpp  MiniMax.hpp  MoveStrategy.hpp  PawnStructureAnalyzer.hpp  StandardBoardEvaluator.hpp
include/gui/: Dialogs.hpp  GameBoard.hpp  GameHistory.hpp  GameSetup.hpp  GuiUtils.hpp  Menu.hpp  TakenPieces.hpp
include/pgn/: FenUtils.hpp  PgnUtils.hpp
resources/: icon.rc.in
src/: CMakeLists.txt  ChessGame.cpp  ChessGame.h  MoveHighlighter.cpp  MoveHighlighter.h  TerminalSizeWatcher.cpp  main.cpp
src/Board/: board.cpp
src/Clock/: clock.cpp
src/Game/: game.cpp
src/Main/: main.cpp
src/Move/: MoveHighlighter.cpp  mover.cpp
src/Player/: player.cpp
src/TUI/: TerminalSizeWatcher.cpp  screen.cpp
src/engine/: Alliance.cpp  CMakeLists.txt  ChessGame.cpp
src/engine/board/: Board.cpp  BoardUtils.cpp  Move.cpp  MoveTransition.cpp  Tile.cpp
src/engine/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
src/engine/player/: BlackPlayer.cpp  Player.cpp  WhitePlayer.cpp
src/engine/player/ai/: AlphaBeta.cpp  MiniMax.cpp  PawnStructureAnalyzer.cpp  StandardBoardEvaluator.cpp
src/engine/utility/: FenUtils.cpp  PgnUtils.cpp
src/game/: ChessGame.cpp  game.cpp
src/gui/: CMakeLists.txt  Dialogs.cpp  GameBoard.cpp  GameHistory.cpp  GameSetup.cpp  GuiUtils.cpp  Menu.cpp  TakenPieces.cpp
src/pgn/: FenUtils.cpp  PgnUtils.cpp
test/: BoardTest.cpp  CMakeLists.txt  PieceTest.cpp  PlayerTest.cpp
